@@ -1,5 +1,5 @@
 /*
- * "$Id: print-canon.c,v 1.481 2012/04/19 16:02:14 gernot2270 Exp $"
+ * "$Id: print-canon.c,v 1.482 2012/04/20 14:30:58 gernot2270 Exp $"
  *
  *   Print plug-in CANON BJL driver for the GIMP.
  *
@@ -3325,7 +3325,7 @@ canon_init_setCartridge(const stp_vars_t *v, const canon_privdata_t *init)
       /* composite black: 2 0 1 for selected modes, rest 2 0 0 */
       /* both blacks    : 2 1 1 for selected modes, some 2 0 1, rest 2 0 0  */
     } 
-    else if ( !(strcmp(init->caps->name,"PIXMA iP6210")) || !(strcmp(init->caps->name,"PIXMA iP6220")) || !(strcmp(init->caps->name,"PIXMA iP6310")) ) {
+    else if ( !(strcmp(init->caps->name,"PIXMA iP6210")) ) {
       canon_cmd(v,ESC28,0x54,3,0x03,0x06,0x06); /* default for iP6210D, iP6220D, iP6310D */
       /* both:  0x3 0x6 0x6 */
       /* color: 0x3 0x1 0x1 */
@@ -3341,7 +3341,7 @@ canon_init_setCartridge(const stp_vars_t *v, const canon_privdata_t *init)
       /* composite black: 2 0 1 for selected modes, rest 2 0 0 */
       /* both blacks    : 2 1 1 for selected modes, some 2 0 1, rest 2 0 0  */
     } 
-    else if ( !(strcmp(init->caps->name,"PIXMA iP6210")) || !(strcmp(init->caps->name,"PIXMA iP6220")) || !(strcmp(init->caps->name,"PIXMA iP6310")) ) {
+    else if ( !(strcmp(init->caps->name,"PIXMA iP6210")) ) {
 	canon_cmd(v,ESC28,0x54,3,0x03,0x06,0x06); /* default for iP6210D, iP6220D, iP6310D */
 	/* both:  0x3 0x6 0x6 */
 	/* color: 0x3 0x1 0x1 */
@@ -3359,7 +3359,7 @@ canon_init_setCartridge(const stp_vars_t *v, const canon_privdata_t *init)
       /* both blacks    : 2 1 1 for selected modes, some 2 0 1, rest 2 0 0  */
       /* workaround since maybe no color option on these printers */
     } 
-    else if ( !(strcmp(init->caps->name,"PIXMA iP6210")) || !(strcmp(init->caps->name,"PIXMA iP6220")) || !(strcmp(init->caps->name,"PIXMA iP6310")) ) {
+    else if ( !(strcmp(init->caps->name,"PIXMA iP6210")) ) {
       canon_cmd(v,ESC28,0x54,3,0x03,0x01,0x01); /* default for iP6210D, iP6220D, iP6310D */
       /* both:  0x3 0x6 0x6 */
       /* color: 0x3 0x1 0x1 */
@@ -3596,7 +3596,7 @@ canon_init_setMultiRaster(const stp_vars_t *v, const canon_privdata_t *init){
       stp_zfwrite((const char *)raster_channel_order,init->num_channels, 1, v);
     }
   /* note these names are from canon-printers.h, only separate driver strings are required */
-  else if ( !(strcmp(init->caps->name,"PIXMA iP6210")) || !(strcmp(init->caps->name,"PIXMA iP6220")) || !(strcmp(init->caps->name,"PIXMA iP6310")) ) {
+  else if ( !(strcmp(init->caps->name,"PIXMA iP6210")) ) {
     /* if cmy there, add 0x60 to each --- only some modes using cmy require it */
     /* case one: all modes with only cmy */
     if (init->num_channels==3) {
@@ -3615,6 +3615,19 @@ canon_init_setMultiRaster(const stp_vars_t *v, const canon_privdata_t *init){
 	case 'c':raster_channel_order[i]+=0x60; break;;
 	case 'm':raster_channel_order[i]+=0x60; break;;
 	case 'y':raster_channel_order[i]+=0x60; break;;
+	}
+      }
+    }
+    /* case three: CMYkm modes with 0x80 to subtract from all inks with 2 or 8 bits */
+    else if ( (init->num_channels==6) && (init->used_inks==CANON_INK_CcMmYK) && ((init->mode->inks[0].ink->bits==2) || (init->mode->inks[0].ink->bits==8)) ) {
+      for(i=0;i<init->num_channels;i++){
+	switch(init->channel_order[i]){
+	case 'C':raster_channel_order[i]+=0x80; break;;
+	case 'M':raster_channel_order[i]+=0x80; break;;
+	case 'Y':raster_channel_order[i]+=0x80; break;;
+	case 'c':raster_channel_order[i]+=0x80; break;;
+	case 'm':raster_channel_order[i]+=0x80; break;;
+	case 'k':raster_channel_order[i]+=0x80; break;;
 	}
       }
     }
