@@ -378,6 +378,9 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA iP2000 (EXPERIMENTAL)
        Canon PIXMA iP4100 (EXPERIMENTAL)
        Canon PIXMA iP5000 (EXPERIMENTAL)
+       Canon PIXMA iP6210D(EXPERIMENTAL)
+       Canon PIXMA iP6220D(EXPERIMENTAL)
+       Canon PIXMA iP6310D(EXPERIMENTAL)
        Canon PIXMA MP600
        Canon PIXMA MP750
        Canon PIXMA MP760
